# Data-Analytics-con-Python

./: .gitignore  README.md  pyproject.toml  setup.cfg
config/: logging_config.py  settings.py
docs/: agregacion-agrupamiento-pandas.md  analisis-correlacion-seaborn.md  analisis-exploratorio-datos-eda.md  calidad-datos.md  consolidacion-datos-etl.md  estadistica-descriptiva.md  estructuras-datos-python.md  fundamentos-librerias-datos.md  fundamentos-tecnicos-data-analytics.md  integracion-datos-pandas-numpy.md  introduccion-data-analytics.md  introduccion-machine-learning-regresion-lineal.md  transformacion-datos-panda.md  visualizacion-avanzada-seaborn.md  visualizacion-datos-matplotlib.md  visualizacion-interactiva-plotly.md
docs/ADRs/: README.md  adr-001-screaming-architecture.md  adr-002-pipeline-funciones-puras.md  adr-003-configuracion-centralizada.md  adr-004-tests-pytest-fixtures.md  adr-005-notebook-unico-generado.md  adr-006-persistencia-csv.md  adr-007-logging-estructurado.md
notebooks/: analisis_comercial.ipynb
src/analysis/: __init__.py  aggregations.py  correlations.py  descriptive.py
src/data/: __init__.py  cleaner.py  exporter.py  loader.py  transformer.py
src/utils/: __init__.py  helpers.py  validators.py
src/visualization/: __init__.py  interactive.py  plots.py  styles.py
tests/: __init__.py  conftest.py  test_analysis.py  test_cleaner.py
