[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "data-analytics-project"
version = "0.1.0"
description = "Proyecto de analisis de datos"
requires-python = ">=3.10"
dependencies = [
    "pandas",
    "numpy",
    "matplotlib",
    "seaborn",
    "plotly",
    "scipy",
    "scikit-learn",
]

[tool.pytest.ini_options]
minversion = "7.0"
